--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ dependencies {
 tasks.register('runAdkWebServer', JavaExec) {
 	classpath = sourceSets.main.runtimeClasspath
 	mainClass = "com.google.adk.web.AdkWebServer"
-	args = ["--adk.agents.source-dir=src/main/java/com/example/Marketing_Agent/agents"] // default: src/main/java
+	args = [
+		"--adk.agents.source-dir=src/main/java/com/example/Marketing_Agent/agents",
+		"--spring.mvc.async.request-timeout=300000",  // 5 minutes timeout
+		"--server.connection-timeout=300000"          // 5 minutes connection timeout
+	]
 }
 
